# mediasoft_test_python

./: Makefile  Procfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: project_CI.yml
fixtures/: city.json  shop.json
test_project/: settings.py  urls.py
test_project/city/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
test_project/city/migrations/: 0001_initial.py  0002_alter_street_city.py  0003_alter_city_name_alter_street_city.py  0004_alter_street_name.py  0005_alter_street_name_street_name_city_constraint.py  0006_alter_street_city.py  0007_alter_street_city.py  0008_alter_street_city.py
test_project/shop/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
test_project/shop/migrations/: 0001_initial.py  0002_shop_city_shop_house_shop_street_shop_to_close_time_and_more.py  0003_remove_shop_city_remove_shop_street.py  0004_shop_city.py  0005_shop_street.py
